19991203-15:18 GMT+1 Jose Lalin <dezac@corevia.com>
  * source/pp/hbpp.c
    ! Bug fixed in #error directive.
      Changed 'F' for 'E' type in hb_compGenError call.
      Now Harbour continues compilig when this directive is
      found like CA-Cl*pper.
    (Uploaded by Victor Szel)

19991203-15:18 GMT+1 Victor Szel <info@szelvesz.hu>
  * doc/hdr_tpl.txt
    + $PLATFORMS$ entry added.

19991203-15:11 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/regress/*
    + Added functionality to test database/field stuff. Alias is w_TEST
    + Added Len(), ValType(), Empty(), Str() tests for fields, all of them
      pass.
    - Removed NIL:classname tests temporarily.
  * include/extend.h
    ! IT_MEMO constant fixed (it was equal with IT_NIL).
    + IS_MEMO() macro added.
  * source/rtl/valtype.c
    source/rtl/len.c
    source/rtl/empty.c
    ! Fixed case when no parameter was passed (via hb_vmDo() for example)
    + Added an $EXAMPLE$ for LEN()
    + Changed $SYNTAX$ for LEN()
    + Added some $SEEALSO$ for LEN()
    * Changed LEN() not to use internal ITEM access.

19991203-02:25 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rdd/dbcmd.c
    + DBEVAL() doc added from dbeval.prg
    ! Error codes fixed in DBEVAL()
    % Some optimization made in DBEVAL()
  * source/rdd/Makefile
  - source/rdd/dbeval.prg
    rdd.b32
    makefile.vc
    - old bad_DBEVAL() removed
  * include/hbextern.ch
    source/runner/stdalone/external.prg
    ! PVALUE -> HB_PVALUE

19991202-18:00 GMT+1 Bruno Cantero <bruno@issnet.net>
  * source/rdd/dbeval.prg
    * Function dbEval() renamed to Bad_dbEval()
  * include/rddapi.h
    source/rdd/dbcmd.c
    source/rdd/dbf1.c
    source/rdd/dbfcdx/dbfcdx1.c
    doc/funclist.txt
    + Added dbEval() function.

19991202-01:45 EST Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
    + source/rtl/break.c
    + source/rtl/empty.c
    + source/rtl/initexit.c
    + source/rtl/len.c
    + source/rtl/pcount.c
    + source/rtl/proc.c
    + source/rtl/pvalue.c