@@ -585,6 +585,9 @@ typedef USHORT ( * DBENTRYP_VL   )( AREAP area, LPDBLOCKINFO param );
 typedef USHORT ( * DBENTRYP_VFI  )( AREAP area, LPDBFILTERINFO param );
 typedef USHORT ( * DBENTRYP_VEI  )( AREAP area, LPDBEVALINFO param );
 typedef USHORT ( * DBENTRYP_VLO  )( AREAP area, LPDBSCOPEINFO param );
+typedef USHORT ( * DBENTRYP_VOC  )( AREAP area, LPDBORDERCREATEINFO param );
+typedef USHORT ( * DBENTRYP_VOI  )( AREAP area, LPDBORDERCONDINFO param );
+typedef USHORT ( * DBENTRYP_OI   )( AREAP area, LPDBORDERINFO param );
 typedef USHORT ( * DBENTRYP_SP   )( AREAP area, USHORT * param );
 typedef USHORT ( * DBENTRYP_P    )( AREAP area, BYTE * param );
 typedef USHORT ( * DBENTRYP_PP   )( AREAP area, BYTE ** param );
@@ -692,14 +695,18 @@ typedef struct _RDDFUNCS
    /* Order Management */
 
    DBENTRYP_VP   orderListAdd;
+#endif
    DBENTRYP_V    orderListClear;
+#if 0
    DBENTRYP_VP   orderListDelete;
    DBENTRYP_VP   orderListFocus;
+#endif
    DBENTRYP_V    orderListRebuild;
 
-   DBENTRYP_VP   orderCondition;
-   DBENTRYP_VP   orderCreate;
-   DBENTRYP_VP   orderDestroy;
+   DBENTRYP_VOI  orderCondition;
+   DBENTRYP_VOC  orderCreate;
+   DBENTRYP_OI   orderDestroy;
+#if 0
    DBENTRYP_SVP  orderInfo;
 #endif
 
