@@ -653,6 +653,11 @@ static RDDFUNCS dbfSuper = { 0 };
 #define dbfStructSize                           NULL
 #define dbfSysName                              NULL
 #define dbfEval                                 NULL
+#define dbfOrderListClear                       NULL
+#define dbfOrderListRebuild                     NULL
+#define dbfOrderCondition                       NULL
+#define dbfOrderCreate                          NULL
+#define dbfOrderDestroy                         NULL
 #define dbfClearFilter                          NULL
 #define dbfClearLocate                          NULL
 #define dbfFilterText                           NULL
@@ -2042,6 +2047,11 @@ static RDDFUNCS dbfTable = { dbfBof,
                              dbfEval,
                              dbfPack,
                              dbfZap,
+                             dbfOrderListClear,
+                             dbfOrderListRebuild,
+                             dbfOrderCondition,
+                             dbfOrderCreate,
+                             dbfOrderDestroy,
                              dbfClearFilter,
                              dbfClearLocate,
                              dbfFilterText,
