@@ -38,10 +38,7 @@
 FUNCTION ordBagExt()       ; RETURN ".ntx"
 FUNCTION ordBagName()      ; RETURN ""
 FUNCTION ordCond()         ; RETURN NIL /* 5.3 */
-FUNCTION ordCondSet()      ; RETURN NIL
-FUNCTION ordCreate()       ; RETURN NIL
 FUNCTION ordDescend()      ; RETURN .F. /* 5.3 */
-FUNCTION ordDestroy()      ; RETURN NIL
 FUNCTION ordFor()          ; RETURN NIL
 FUNCTION ordIsUnique()     ; RETURN .F. /* 5.3 */
 FUNCTION ordKey()          ; RETURN ""
@@ -52,8 +49,6 @@ FUNCTION ordKeyGoto()      ; RETURN .F. /* 5.3 */
 FUNCTION ordKeyNo()        ; RETURN 0   /* 5.3 */
 FUNCTION ordKeyVal()       ; RETURN NIL /* 5.3 */
 FUNCTION ordListAdd()      ; RETURN NIL
-FUNCTION ordListClear()    ; RETURN NIL
-FUNCTION ordListRebuild()  ; RETURN NIL
 FUNCTION ordName()         ; RETURN ""
 FUNCTION ordNumber()       ; RETURN 0
 FUNCTION ordScope()        ; RETURN NIL /* 5.3 */
